--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ body {
   line-height: 1.5;
   display: flex;
   justify-content: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 h1,
