--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,9 +1,10 @@
-table {
+.table {
   width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  overflow: hidden;
 }
 
 th,
@@ -26,13 +27,7 @@ td {
 }
 
 tr:nth-child(even) td {
-  background-color: #f1f1f1;
+  background-color: gray;
 }
 
-tr:hover {
-  background-color: #f2f2f2;
-}
 
-table {
-  overflow: hidden;
-}
